3rdParty/zlib-1.2.7/configure.log
--------------------
./configure --static
Fri Feb 26 16:07:41 IST 2016

=== ztest49929.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE ztest49929.c
... using gcc

Building static library libz.a version 1.2.7 with gcc.


=== ztest49929.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE -D_LARGEFILE64_SOURCE=1 ztest49929.c
ztest49929.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/usr/include/sys/_types/_off_t.h:30:25: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest49929.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
gcc -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE -o ztest49929 ztest49929.c
Checking for fseeko... Yes.

=== ztest49929.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE -o ztest49929 ztest49929.c
Checking for strerror... Yes.

=== ztest49929.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE ztest49929.c
Checking for unistd.h... Yes.

=== ztest49929.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE ztest49929.c
Checking for stdarg.h... Yes.

=== ztest49929.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE ztest49929.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest49929.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE -o ztest49929 ztest49929.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest49929.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE ztest49929.c
Checking for return value of vsnprintf()... Yes.

=== ztest49929.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE ztest49929.c
Checking for attribute(visibility) support... Yes.

=== ztest49929.c ===
#include <stdio.h>
#define is32(n,t) for(n=1,k=0;n;n<<=1,k++);if(k==32){puts(t);return 0;}
int main() {
    int k;
    unsigned i;
    unsigned long l;
    unsigned short s;
    is32(i, "unsigned")
    is32(l, "unsigned long")
    is32(s, "unsigned short")
    return 1;
}
===
gcc -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE -DHAVE_HIDDEN ztest49929.c -o ztest49929
Looking for a four-byte integer type... Found.

ALL = static
AR = /usr/bin/libtool
ARFLAGS = -o
CC = gcc
CFLAGS = -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE -DHAVE_HIDDEN
CPP = gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = gcc
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -std=gnu90 -g -O2 -Wall -Winit-self -Wno-long-long -Wno-variadic-macros -Wno-deprecated-declarations -Wshadow -Wstrict-prototypes -Wdeclaration-after-statement -D_THREAD_SAFE -fPIC -DHAVE_HIDDEN
SHAREDLIB =
SHAREDLIBM =
SHAREDLIBV =
STATICLIB = libz.a
TEST = all teststatic
VER = 1.2.7
Z_U4 = unsigned
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Darwin
--------------------


